Pull request #1104: fix/AG-10664
Merge in EXTENSIONS/browser-extension from fix/AG-10664 to master

Squashed commit of the following:

commit 3a2ab29fb1978b886fee1d396815fb74ead00087
Merge: a26d3778f c9bc50099
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Oct 18 11:58:13 2021 +0300

    Merge branch 'master' into fix/AG-10664

commit a26d3778fd4d8ebc203c839cc8d23b518c116862
Author: Anton <a.kaprielov@adguard.com>
Date:   Fri Oct 15 16:21:35 2021 +0300

    fix/AG-10664 fix duplicate checkbox hover & title description cursor pointer

--- a/Extension/src/pages/options/styles/common.pcss
+++ b/Extension/src/pages/options/styles/common.pcss
@@ -156,6 +156,10 @@ label.checkbox-label {
             cursor: pointer;
             transition: var(--t3) background-color;
 
+            .checkbox__label:hover {
+                background-color: transparent;
+            }
+
             &:hover {
                 background-color: var(--gray100);
 
@@ -193,6 +197,10 @@ label.checkbox-label {
         font-weight: 400;
         color: var(--gray700);
         margin-top: 8px;
+        
+        &--back {
+            cursor: pointer;
+        }
     }
 
     &--back-btn {
