--- a/Extension/src/pages/options/styles/setting.pcss
+++ b/Extension/src/pages/options/styles/setting.pcss
@@ -173,6 +173,10 @@
             background-color: var(--gray900);
         }
     }
+
+    .checkbox__label:hover {
+        background-color: transparent;
+    }
 }
 
 .light-mode {
